--- a/src/app/examples/02-reactive-forms-example/components/form-view.component.html
+++ b/src/app/examples/02-reactive-forms-example/components/form-view.component.html
@@ -1,5 +1,5 @@
 <article class="markdown-body">
-    <h1>Reactive Forms</h1>
+    <h1>Reactive Forms - Markdown example</h1>
     <app-form-markdown></app-form-markdown>
     <ng-template [ngIf]="loadingService.isLoading() | async">
         <mat-card>
